= 1.2.0 =
[Added] GitHub Repo Sync for (TukuToi) Plugins
[Added] Total Page Number on pagination
[Changed] Moved the "report this plugin" to the left in the cards

= 1.1.4 =
[Fixed] Plugins (unless the integration itself) got deactivated after Updating.

= 1.1.3 =
[Fixed] Plugin could not update itself.
[Fixed] Request-URI Too Long when performing several searches without resetting the search.
[Fixed] Unused third argument in AJAX operations removed.

= 1.1.0 =
[Added] AJAXified install/activate/deactivate/update/delete buttons/features. 
[Added] Bottom pagination
[Fixed] Design of main search bar

= 1.0.1 =
[Fixed] Added fallback for when no mail client is installed on user computer.

= 1.0.0 =
[Added] Initial release